--- a/styles.css
+++ b/styles.css
@@ -24,12 +24,12 @@ h2 {
 }
 
 /* Dark mode styles */
-.dark-mode .container {
+.theme-dark .container {
     background-color: #333;
     color: #f7f7f7;
 }
 
-.dark-mode button {
+.theme-dark button {
     background-color: #f7f7f7;
     color: #333;
 }
@@ -52,22 +52,4 @@ button.theme-toggle:hover {
 }
 
 /* Experience items with company logos */
-.experience-item {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 2rem;
-    border: 1px solid #ccc;
-    padding: 1rem;
-    border-radius: 5px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.experience-item img {
-    width: 100px;
-    margin-bottom: 1rem;
-}
-
-.experience-item > div {
-    text-align: center;
-}
+// ... [remaining unchanged part]
