--- a/styles.css
+++ b/styles.css
@@ -220,8 +220,8 @@ button.menu-toggle:hover {
     background-color: #c71585;
 }
 
-/* Style for the OnlyFans SVG logo */
-.onlyfans-logo {
+/* Style for the prank SVG logo */
+.prank-logo {
     width: 24px;
     height: 24px;
     vertical-align: middle;
